Test/dafny4/Regression17.dfy.expect
Regression17.dfy(8,20): Error: name of type (nt) is used as a variable
1 resolution/type errors detected in Regression17.dfy
